Fix song names that overflow the song title div

--- a/css/player.css
+++ b/css/player.css
@@ -58,6 +58,9 @@ audio-player > .player-controls > div {
     width: 0; /* needed to make flexbox do its job */
     flex-wrap: nowrap;
 
+    white-space: nowrap;
+    overflow: hidden;
+
     padding: 5px;
 }
 
